# optimof

./: .gitignore  LICENSE.txt  Makefile  README.md  environment.yml  taskfile.yml
app/: __init__.py  __main__.py  app.py  mof_map.py  predict.py
app/templates/: index.html
data/: README.md  all_in_one_cols.pkl  check_features.py  features.csv  mof_map.pkl  mof_map_scaler.pkl  solvent_split_data.pkl  thermal_raw.pickle  water_split_data.pkl
data/mof_map/: mof_map_filled.pkl  mof_map_filled_scaler.pkl
data/solvent/: solvent_all_data.csv  solvent_split_data.pkl  solvent_test_data.pkl
data/thermal/: thermal_all_data.csv  thermal_test_data.pkl
data/water_and_haz/: water_rf_test_data.pkl  water_split_data.pkl
doc/: summary.md  tuning.md
model/: check_features.py  features.csv  hyperparams.json  solvent_hyperparams.json  solvent_model.pkl  thermal_hyperparams.json  thermal_model.pickle  thermal_model.pkl  water_boost_model.pkl
model/preprocess/: solvent_scalar.pkl  thermal_scalar.pkl
model/saved_models/: solvent_model_78acc.pkl  solvent_model_78accuracy.pkl  solvent_model_accuracy79.pkl  thermal_model_31rmse.pkl  thermal_model_33rmse.pkl  thermal_model_58mse.pkl
rac-extractor/: CMakeLists.txt  README.md  main.cpp  rac-extractor.cpp  utils.cpp  utils.hpp
src/: RAC_finder.py  __main__.py  descriptor.py  main.py
src/app/: __main__.py  mof_map.py  predict.py
src/config/: __init__.py  constants.py  paths.py
src/feature_extraction/: RAC_finder.py  feature_extraction.py
src/model_features/: __init__.py  (+7 more)
temp/: test_primitive.cif
test/: check_features.py
(+67 files in other folders)
